# aoc-2022

./: .gitignore  Cargo.toml  perf.data  perf.data.old
src/: lib.rs  main.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs  solve.py
src/day17/: mod.rs
src/day18/: mod.rs
src/day19/: mod.rs
src/day2/: mod.rs  mod.rs.orig
src/day20/: mod.rs
src/day21/: mod.rs
src/day22/: mod.rs
src/day23/: mod.rs
src/day24/: mod.rs
src/day25/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
src/day_template/: mod.rs
