[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-downloader = { git = "https://github.com/Gronner/aoc-downloader" }
cached = "0.40.0"
itertools = "0.10.5"
num = "0.4.0"
once_cell = "1.16.0"
petgraph = "0.6.2"
regex = "1.7.0"

[profile.dev]
opt-level = 3
